# wavelet-kit

./: Makefile  README.md  app.py  pyproject.toml  sample_app.py
images/: disk_50_surface1 copy.tif
notebooks/: prototype.ipynb  reconstructed_image.tiff  wavelet_graphic.ipynb
src/: app.py  prototype_algorithm.py
src/images/: reconstructed_image.tiff  stacked_jupiter.tiff
src/pages/: About.py  ❔_How_To_Use.py  💡_Learn.py
